--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -6,19 +6,44 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+
 </head>
 <body>
-<form method="post" action="/signup">
-    <input name="name" placeholder="name">
-    <br>
-    <input name="college" placeholder="college">
-    <br>
-    <input name="username" placeholder="username">
-    <br>
-    <input type="password" name="password" placeholder="password">
-    <br>
-    <input type="submit">
-</form>
-
+<br>
+<br>
+<br>
+<div class="row padding">
+    <div class="col-1"></div>
+    <div class="col-10">
+        <div class="loginUsers padding">
+            <h1 style="color: red">
+                SIGNUP FOR PARTICIPANTS
+            </h1>
+            <hr style="color: red">
+            <br>
+            <form method="post" action="/signup">
+                <div>
+                    <div class="col-2"></div>
+                    <div class="col-6">
+                        <input name="name" placeholder="name">
+                        <br>
+                        <input name="college" placeholder="college">
+                        <br>
+                        <input name="username" placeholder="username">
+                        <br>
+                        <input type="password" name="password" placeholder="password">
+                        <br>
+                        <input type="submit">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
