--- a/views/login.hbs
+++ b/views/login.hbs
@@ -31,10 +31,10 @@
             <form method="post" action="/user/login">
                 <div>
                     <div class="col-6">
-                        <input placeholder="username" name="Username" class="form1">
+                        <input placeholder="username" name="username" class="form1">
                         <br>
                         <br>
-                        <input type="password" placeholder="Password" name="password" class="form1">
+                        <input type="password" placeholder="password" name="password" class="form1">
                         <br>
                         <br>
                         <input type="submit" value="login" class="form1">
