--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -22,7 +22,8 @@
     <div class="col-3"></div>
     <div class="col-6" align="center">
         <h1 class="main-title">
-            <a type="button" href="#"><b>LEADERBOARD</b></a>
+            <!--<a type="button" href="#"><b>LEADERBOARD</b></a>-->
+            <b>WELCOME TO BLINDCODE</b>
         </h1>
         <br>
     </div>
@@ -34,12 +35,11 @@
     <div class="row text-center padding">
         <div class="col-md-6 col-lg-4 padding cardSection">
             <div class="card">
-                <img class="card-img-top" src="public/img/recreational.jpeg">
+                <img class="card-img-top" src="#">
                 <div class="card-body">
                     <h4 class="card-title">Question 1</h4>
-                    <p class="card-text">   ----------------some information------------             </p>
+                    <p class="card-text">   Greed For Innovision Prize             </p>
                     <a href="/question/ques1" class="btn btn-outline-secondary">Attempt</a>
-                    <!-- link to different societies of a particular type can be added in a webpage here -->
                 </div>
             </div>
         </div>
@@ -48,7 +48,7 @@
                 <img class="card-img-top" src="public/img/tech.jpeg">
                 <div class="card-body">
                     <h4 class="card-title">Question 2</h4>
-                    <p class="card-text">   ------------------------------------------             </p>
+                    <p class="card-text">   Unique Elements            </p>
                     <a href="/question/ques2" class="btn btn-outline-secondary">Attempt</a>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                 <img class="card-img-top" src="public/img/literary.jpeg">
                 <div class="card-body">
                     <h4 class="card-title">Question3</h4>
-                    <p class="card-text">   ------------------------------------------             </p>
+                    <p class="card-text">   Special Strings           </p>
                     <a href="/question/ques3" class="btn btn-outline-secondary">Attempt</a>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                 <img class="card-img-top" src="public/img/non-tech.jpeg">
                 <div class="card-body">
                     <h4 class="card-title">Question 4</h4>
-                    <p class="card-text">   ------------------------------------------             </p>
+                    <p class="card-text">   Playing with Factorials              </p>
                     <a href="/question/ques4" class="btn btn-outline-secondary">Attempt</a>
                 </div>
             </div>
@@ -78,19 +78,8 @@
                 <img class="card-img-top" src="public/img/automotive.jpeg">
                 <div class="card-body">
                     <h4 class="card-title">Question 5</h4>
-                    <p class="card-text">   ------------------------------------------             </p>
+                    <p class="card-text">   Division of Stipend           </p>
                     <a href="/question/ques5" class="btn btn-outline-secondary">Attempt</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-lg-4 padding cardSection">
-            <div class="card">
-                <img class="card-img-top" src="public/img/community.jpeg" >
-                <div class="card-body">
-                    <h4 class="card-title">Question 6</h4>
-                    <p class="card-text">   ------------------------------------------             </p>
-                    <a href="/question/ques6" class="btn btn-outline-secondary">Attempt</a>
-
                 </div>
             </div>
         </div>
