--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -16,8 +16,7 @@
     <!--<script src="public/index.js"></script>-->
     <link href="https://maxcdn.bootstrapcdn .com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
-<body>
-
+<body >
 <div class="row" style="margin-top: 100px">
     <div class="col-3"></div>
     <div class="col-6" align="center">
@@ -35,7 +34,7 @@
     <div class="row text-center padding">
         <div class="col-md-6 col-lg-4 padding cardSection">
             <div class="card">
-                <img class="card-img-top" src="#">
+                <img class="card-img-top" src="../images/images.png" >
                 <div class="card-body">
                     <h4 class="card-title">Question 1</h4>
                     <p class="card-text">   Greed For Innovision Prize             </p>
@@ -45,7 +44,7 @@
         </div>
         <div class="col-md-6 col-lg-4 padding cardSection">
             <div class="card">
-                <img class="card-img-top" src="public/img/tech.jpeg">
+                <img class="card-img-top" src="../images/images1.png">
                 <div class="card-body">
                     <h4 class="card-title">Question 2</h4>
                     <p class="card-text">   Unique Elements            </p>
@@ -55,7 +54,7 @@
         </div>
         <div class="col-md-6 col-lg-4 padding cardSection">
             <div class="card">
-                <img class="card-img-top" src="public/img/literary.jpeg">
+                <img class="card-img-top" src="../images/images2.png">
                 <div class="card-body">
                     <h4 class="card-title">Question3</h4>
                     <p class="card-text">   Special Strings           </p>
@@ -65,7 +64,7 @@
         </div>
         <div class="col-md-6 col-lg-4 padding cardSection">
             <div class="card">
-                <img class="card-img-top" src="public/img/non-tech.jpeg">
+                <img class="card-img-top" src="../images/images3.png">
                 <div class="card-body">
                     <h4 class="card-title">Question 4</h4>
                     <p class="card-text">   Playing with Factorials              </p>
@@ -75,7 +74,7 @@
         </div>
         <div class="col-md-6 col-lg-4 padding cardSection">
             <div class="card">
-                <img class="card-img-top" src="public/img/automotive.jpeg">
+                <img class="card-img-top" src="../images/glaucous.png">
                 <div class="card-body">
                     <h4 class="card-title">Question 5</h4>
                     <p class="card-text">   Division of Stipend           </p>
