--- a/views/q3.hbs
+++ b/views/q3.hbs
@@ -50,6 +50,8 @@
             Sample Explanation:
         </b><br> The special strings of length 4 are : <br>abab<br>abba<br>abbb<br>baba<br>babb<br>bbab<br>bbba<br>bbbb
 <br>
+            <br><br><br>
+            <b>PeakTime : 7 seconds</b>
 
 
         </div></div>
@@ -57,7 +59,7 @@
 </div>
 <br><br>
 <form method="post" action="/question/ques3">
-    <input id="editor">
+    <input id="editor" name="q3code">
     <br>
     <br>
     <button type="button" onClick="onClick()">SHOW SCREEN</button>
@@ -85,7 +87,7 @@
             document.getElementsByClassName('CodeMirror')[0].style.color= 'black';
             setTimeout(function () {
                 document.getElementsByClassName('CodeMirror')[0].style.color= 'white';
-            },5000)
+            },7000)
             clicks += 1;
             document.getElementById("clicks").innerHTML = clicks;
         }
