--- a/views/q4.hbs
+++ b/views/q4.hbs
@@ -52,12 +52,14 @@
             Sample Explanation:
         </b> 4!/2! equals 12 with the last digit as 2
 <br><br>
+            <br>
+            <b>PeakTime : 8 seconds</b>
         </div>
     </div>
 </div>
 <br><br>
 <form method="post" action="/question/ques4">
-    <input id="editor">
+    <input id="editor" name="q4code">
     <br>
     <br>
     <button type="button" onClick="onClick()">SHOW SCREEN</button>
@@ -85,7 +87,7 @@
             document.getElementsByClassName('CodeMirror')[0].style.color= 'black';
             setTimeout(function () {
                 document.getElementsByClassName('CodeMirror')[0].style.color= 'white';
-            },5000)
+            },8000)
             clicks += 1;
             document.getElementById("clicks").innerHTML = clicks;
         }
